k8s/ingress/ingress.production.yaml
# ingress.production.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
spec:
  ingressClassName: nginx # Only in staging/production.
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: litter
                port:
                  number: 8888
