k8s/ingress/ingress.staging.yaml
# ingress.staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: staging-ragdoll
  annotations:
    # Add your annotations here if needed
spec:
  ingressClassName: nginx # Only in staging/production.
  rules:
    - host: qa-cscloud7-110.lnu.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: litter
                port:
                  number: 8888
